<resources>
    <string name="app_name">BikerBud</string>
    <string name="weathertab">Weather</string>
    <string name="exploretab">Explore</string>
    <string name="submittab">Submit</string>
    <string name="directionstab">Directions</string>
    <string name="location">Location:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="weather">Weather fragment has yet to see implementation. Sorry.</string>
    <string name="explore">Explore fragment has yet to see implementation. Sorry.</string>
    <string name="submit">Submit fragment has yet to see implementation. Sorry.</string>
    <string name="directions">Currently no directions to display. Select a route to request directions.</string>
    <string name="unknown">unknown</string>
    <string name="refresh">Refresh</string>
    <string name="werr_0">Errors:</string>
    <string name="werr_1">BikerBud API does not respond!</string>
    <string name="werr_2">BikerBud API gave error response!</string>
    <string name="werr_3">BikerBud API could not understand app request!</string>
    <string name="werr_4">BikerBud App could not understand API response!</string>
    <string name="werr_5">"Weather API does not respond!"</string>
    <string name="werr_6">Weather API gave error response!</string>
    <string name="werr_7">Weather API could not understand API request!</string>
    <string name="werr_8">BikerBud API could not understand Weather API response!</string>
    <string name="warn_0">Warnings:</string>
    <string name="warn_1">Sliding danger:</string>
    <string name="warn_2">Icy Roads</string>
    <string name="warn_3">Wet Roads</string>
    <string name="warn_4">Snow</string>
    <string name="warn_5">Dangerous winds:</string>
    <string name="warn_6">High Wind Speed</string>
    <string name="warn_7">Bad visibility:</string>
    <string name="warn_8">Rainfall</string>
    <string name="warn_9">Mist</string>
    <string name="warn_10">Snowfall</string>
    <string name="warn_11">Extreme temperature:</string>
    <string name="warn_12">Heat</string>
    <string name="warn_13">Cold</string>
    <string name="warn_14">Nothing to report.</string>
    <string name="advice">"As always: \nDress for the slide, not the ride."</string>
    <string name="sub_begin">Begin tracking</string>
    <string name="sub_stop">Stop tracking</string>
    <string name="sub_submit">Submit route</string>
    <string name="sub_waypoint">Waypoints:</string>
    <string name="sub_cancel">Clear waypoints</string>
    <string name="none">No waypoints to display.</string>
    <string name="sub_success">"Submitted with route number: "</string>
    <string name="sub_failure">Submission failed! Try again.</string>
    <string name="sub_while_track">Cannot submit while tracking.</string>
    <string name="JSONexception">JSON conversion error in preparation of submission request.</string>
</resources>