<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:id="@+id/warningwindowwrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="62dp"
        >
        <LinearLayout
            android:id="@+id/locationwrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/locationheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/locationlongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        />
                    <TextView
                        android:id="@+id/locationlatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/textlongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:textColor="@color/bikermango"
                        android:text="@string/unknown"
                        />
                    <TextView
                        android:id="@+id/textlatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:textColor="@color/bikermango"
                        android:text="@string/unknown"
                        />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/trackbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbackgroundselector"
                android:text="@string/sub_begin"
                android:textColor="@color/tabcolorselector"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/waypointwrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/waypointheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_waypoint"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/waypointlistholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                >
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="120dp"
            >
            <Button
                android:id="@+id/submitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbackgroundselector"
                android:text="@string/sub_submit"
                android:textColor="@color/tabcolorselector"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />
            <Button
                android:id="@+id/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbackgroundselector"
                android:text="@string/sub_cancel"
                android:textColor="@color/tabcolorselector"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>